--- a/EECIP/Views/Account/RegisterSuccess.cshtml
+++ b/EECIP/Views/Account/RegisterSuccess.cshtml
@@ -6,7 +6,7 @@
 <div class="box-forgot" style="display: block;">
     <form class="form-forgot" novalidate="novalidate">
         <div class="alert alert-success">
-            <h4><i class="fa fa-ok-sign"></i>Email Verification Required!</h4>
+            <h4><i class="clip-checkmark-circle-2"></i> Email Verification Required!</h4>
             <br />
             You will need to verify your account. Please <b>check your email</b> and <b>click the link in the email</b> to verify your account.
             <br/>
