--- a/EECIP/Views/Account/UserProfile.cshtml
+++ b/EECIP/Views/Account/UserProfile.cshtml
@@ -175,7 +175,7 @@
                             {
                                 <div class="alert alert-block alert-danger fade in">
                                     <button data-dismiss="alert" class="close" type="button">×</button>
-                                    <h4 class="alert-heading"><i class="fa fa-times-circle"></i> Share your interests!</h4>
+                                    <h4 class="alert-heading"><i class="clip-notification-2"></i> Share your interests!</h4>
                                     <p>
                                         By specifying your expertise and interests, content in EECIP can be tailored to your specified interests, and others know who to contact with questions or project ideas.
                                     </p>
