--- a/EECIP/Views/Account/Verify.cshtml
+++ b/EECIP/Views/Account/Verify.cshtml
@@ -12,7 +12,7 @@
     {
         <div class="alert alert-danger">
             <button type="button" class="close" data-dismiss="alert">×</button>
-            <h4><i class="fa fa-ok-sign"></i>Unable to Verify Account</h4>
+            <h4><i class="clip-checkmark-circle-2"></i>Unable to Verify Account</h4>
             <br />
             @TempData["Error"]
         </div>
