--- a/EECIP/Views/Shared/_PartialHeadNotification.cshtml
+++ b/EECIP/Views/Shared/_PartialHeadNotification.cshtml
@@ -37,7 +37,7 @@
             </li>
             <li class="view-all">
                 <a href="@Url.Action("Notifications","Account")">
-                    See all notifications <i class="fa fa-arrow-circle-o-right"></i>
+                    See all notifications <i class="clip-arrow-right"></i>
                 </a>
             </li>
         </ul>
