--- a/EECIP/Views/Shared/_ValidationSummary.cshtml
+++ b/EECIP/Views/Shared/_ValidationSummary.cshtml
@@ -3,7 +3,7 @@
 {
     <div class="errorHandler alert alert-danger">
         <button data-dismiss="alert" class="close">×</button>
-        <i class="fa fa-info-circle"></i> @TempData["Error"] 
+        <i class="clip-info-2"></i> @TempData["Error"] 
     </div>
 }
 
@@ -11,7 +11,7 @@
 {
     <div class="alert alert-success ">
         <button data-dismiss="alert" class="close">x×</button>
-        <i class="fa fa-check-circle"></i> @TempData["Success"]
+        <i class="clip-info-2"></i> @TempData["Success"]
     </div>
 }
 
