--- a/EECIP/Views/Admin/RefAgencyEdit.cshtml
+++ b/EECIP/Views/Admin/RefAgencyEdit.cshtml
@@ -126,13 +126,12 @@
 
             </div>
         </div>
-        <!-- end: AGENCY EMAIL RULES -->
     </div>
 </div>
+<!-- end: AGENCY EMAIL RULES -->
 
 
-
-<!-- START MODAL FORM  -->
+<!-- START EMAIL RULE MODAL FORM  -->
 <div class="modal fade" id="modal-form" style="display: none;" aria-hidden="true">
     <div class="modal-dialog">
         @using (Html.BeginForm("RefAgencyEditEmail", "Admin", FormMethod.Post, new { @class = "" }))
@@ -144,6 +143,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
                     <h3 class="modal-tital">Add Email Rule</h3>
+                    (For example if email is JohnDoe@abc.com, email rule will be abc.com)
                 </div>
                 <div class="modal-body">
                     <div class="row">
