--- a/EECIP/Views/Admin/RefTags.cshtml
+++ b/EECIP/Views/Admin/RefTags.cshtml
@@ -8,65 +8,67 @@
 @using (Html.BeginForm("RefTags", "Admin", FormMethod.Post, new { @class = "form-horizontal" }))
 {
     <div class="form-group">
-        <label class="col-sm-1 control-label" for="form-field-1">
-            Tag Category: 
+        <label class="col-sm-2 control-label">
+            Tag Category:
         </label>
-        <div class="col-sm-3">
+        <div class="col-sm-6">
             @Html.DropDownListFor(model => model.sel_tag_cat, Model.ddl_tag_cats, "", new { @class = "form-control", @onchange = "document.location.href = '/Admin/RefTags?selTag=' + this.options[this.selectedIndex].value;" })
+            @if (!string.IsNullOrEmpty(Model.sel_tag_cat))
+            {
+            <span class="help-block"><i class="clip-question"></i> @Html.DisplayFor(model => model.sel_tag_cat_desc)</span>
+            }
         </div>
     </div>
 }
-<div class="row">
-    <div class="col-sm-12">
+
 @if (!string.IsNullOrEmpty(Model.sel_tag_cat))
 {
-
-        <section class="panel panel-default">
-            <div class="table-responsive">
-                <table class="table table-striped m-b-none" data-ride="datatables">
-                    <tr>
-                        <th style="min-width: 70px;">Edit</th>
-                        <th>Tag Name</th>
-                        <th>Tag Category</th>
-                        @*<th>User Created</th>*@
-                    </tr>
-
-                    @foreach (var item in Model.tags)
-                    {
+    <div class="row">
+        <div class="col-sm-12">
+            <section class="panel panel-default">
+                <div class="table-responsive">
+                    <table class="table table-striped m-b-none" data-ride="datatables">
                         <tr>
-                            <td>
-                                <a href="#modal-form" class="btn btn-rounded btn-xs btn-info modal-it" data-toggle="modal"><i class="glyphicon glyphicon-pencil"></i></a>
-                                <div class="delete-section" style="display:inline">
-                                    <a class=" btn btn-rounded btn-xs btn-danger delete-link"><i class="glyphicon glyphicon-remove"></i></a>
-                                    <div class="btn btn-rounded btn-xs btn-warning delete-confirm" style="display:none" data-delete-id="@item.TAG_IDX" data-delete-p="/Admin/RefTagsDelete"><b>Confirm Delete</b></div>
-                                </div>
-
-                                @Html.HiddenFor(modelItem => item.TAG_IDX)
-                                @Html.HiddenFor(modelItem => item.TAG_NAME)
-                                @Html.HiddenFor(modelItem => item.TAG_CAT_NAME)
-                                @Html.HiddenFor(modelItem => item.USER_CREATE_IND)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TAG_NAME)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TAG_CAT_NAME)
-                            @*</td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.USER_CREATE_IND)
-                            </td>*@
+                            <th style="min-width: 70px;">Edit</th>
+                            <th>Tag Name</th>
+                            <th>Tag Category</th>
                         </tr>
-                    }
-                </table>
-            </div>
-        </section>
-        <p>
-            <a id="add-it" href="#modal-form" data-toggle="modal" class="add-it btn btn-rounded  btn-rounded btn-success"><i class="glyphicon glyphicon-plus"></i> Add New</a>
-        </p>
-}
-    </div>
-</div>
+                        @foreach (var item in Model.tags)
+                        {
+                            <tr>
+                                <td>
+                                    <a href="#modal-form" class="btn btn-rounded btn-xs btn-info modal-it" data-toggle="modal"><i class="glyphicon glyphicon-pencil"></i></a>
+                                    <div class="delete-section" style="display:inline">
+                                        <a class=" btn btn-rounded btn-xs btn-danger delete-link"><i class="glyphicon glyphicon-remove"></i></a>
+                                        <div class="btn btn-rounded btn-xs btn-warning delete-confirm" style="display:none" data-delete-id="@item.TAG_IDX" data-delete-p="/Admin/RefTagsDelete"><b>Confirm Delete</b></div>
+                                    </div>
 
+                                    @Html.HiddenFor(modelItem => item.TAG_IDX)
+                                    @Html.HiddenFor(modelItem => item.TAG_NAME)
+                                    @Html.HiddenFor(modelItem => item.TAG_CAT_NAME)
+                                    @Html.HiddenFor(modelItem => item.PROMOTE_IND)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TAG_NAME)
+                                    @if (item.PROMOTE_IND)
+                                    {
+                                        <span class="label label-success">promoted</span>
+                                    }
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TAG_CAT_NAME)
+                                </td>
+                            </tr>
+                        }
+                    </table>
+                </div>
+            </section>
+            <p>
+                <a id="add-it" href="#modal-form" data-toggle="modal" class="add-it btn btn-rounded  btn-rounded btn-success"><i class="glyphicon glyphicon-plus"></i> Add New</a>
+            </p>
+        </div>
+    </div>
+}
 
 
 <!-- START MODAL FORM  -->
@@ -98,11 +100,21 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label>Tag Category</label>
-                                            @Html.TextBoxFor(model => model.sel_tag_cat, new { @class = "form-control", @readonly="readonly" })
-                                            @Html.ValidationMessageFor(model => model.edit_tag)
+                                            @Html.TextBoxFor(model => model.sel_tag_cat, new { @class = "form-control", @readonly = "readonly" })
                                         </div>
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label>Promote this tag</label>
+                                            @Html.CheckBoxFor(model => model.edit_promote_ind, new { @class = "checkbox" })
+                                            <span class="help-block"><i class="clip-question"></i> Promote this tag to encourage people to subscribe to it.</span>
+                                            @Html.ValidationMessageFor(model => model.edit_promote_ind)
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -127,6 +139,7 @@
             $(".modal-it").click(function () {
                 $('#edit_tag_idx').val($(this).parent('td').find('#item_TAG_IDX').val());
                 $('#edit_tag').val($(this).parent('td').find('#item_TAG_NAME').val());
+                $('#edit_promote_ind').prop('checked',$(this).parent('td').find('#item_PROMOTE_IND').val() == 'True');
                 $('#sel_tag_cat').val($('#sel_tag_cat'));
             });
 
