--- a/EECIP/Views/Dashboard/AgencyCard.cshtml
+++ b/EECIP/Views/Dashboard/AgencyCard.cshtml
@@ -121,7 +121,7 @@
 
                                     </div>
                                 }*@
-                                <a href="@Url.Action("UserCard", "Dashboard", new { strid = item.USER_IDX })" class="circle-tile-footer">More Info <i class="fa fa-chevron-circle-right"></i></a>
+                                <a href="@Url.Action("UserCard", "Dashboard", new { strid = item.USER_IDX })" class="circle-tile-footer">More Info <i class="clip-arrow-right-2"></i></a>
                             </div>
                         </div>
                     </div>
@@ -250,7 +250,7 @@
                                 <td>
                                     @foreach (var subitem in item.T_OE_PROJECT_TAGS)
                                     {
-                                        if (subitem.PROJECT_ATTRIBUTE == "Project Feature")
+                                        if (subitem.PROJECT_ATTRIBUTE == "Tags")
                                         {
                                             <span class="select2-selection__choice">@Html.DisplayFor(modelItem => subitem.PROJECT_TAG_NAME)</span>
                                         }
