--- a/EECIP/Views/Dashboard/ProjectCard.cshtml
+++ b/EECIP/Views/Dashboard/ProjectCard.cshtml
@@ -182,7 +182,7 @@
                                         <i class="clip-linkedin"></i>
                                     </a>
                                 </div>
-                                <a href="@Url.Action("UserCard", "Dashboard", new { strid = Model.project.PROJECT_CONTACT_IDX })" class="circle-tile-footer">More Info <i class="fa fa-chevron-circle-right"></i></a>
+                                <a href="@Url.Action("UserCard", "Dashboard", new { strid = Model.project.PROJECT_CONTACT_IDX })" class="circle-tile-footer">More Info <i class="clip-arrow-right-2"></i></a>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                 {
                     <div class="alert alert-block alert-info">
                         <button data-dismiss="alert" class="close" type="button">×</button>
-                        <h4 class="alert-heading"><i class="fa fa-times-circle"></i> No project contact found</h4>
+                        <h4 class="alert-heading">No project contact found</h4>
                         <p>
                             No contact information has been entered for this project. However, you can contact support@eecip.net to get assistance in finding an appropriate contact.
                         </p>
