--- a/EECIP/Views/Forum/ShowTopic.cshtml
+++ b/EECIP/Views/Forum/ShowTopic.cshtml
@@ -117,6 +117,8 @@
 
             @if (!Model.Topic.IsLocked)
             {
+                if (!User.IsInRole("ReadOnly"))
+                {
                 <span id="newpostmarker"></span>
                 <div id="createpostholder">
                     @using (Ajax.BeginForm("CreatePost", "Forum", null, new AjaxOptions
@@ -140,6 +142,7 @@
                         @Html.HiddenFor(x => x.Topic.Slug)
                     }
                 </div>
+                }
             }
             else
             {
