--- a/EECIP/Views/ForumAdmin/DeleteCategoryConfirmation.cshtml
+++ b/EECIP/Views/ForumAdmin/DeleteCategoryConfirmation.cshtml
@@ -1,10 +1,9 @@
-﻿@model MVCForum.Website.Areas.Admin.ViewModels.DeleteCategoryViewModel
+﻿@model EECIP.Models.vmForumAdminDeleteCategory
 @{
-    ViewBag.Title = "Delete Category";
-    var topicCount = Model.Category.Topics.Count;
+    ViewBag.Title = "Delete Category Confirmation";
 }
 
-@Html.Partial("_CategoryNavButtons")
+@Html.Partial("_CategoryTopNav")
 
 <div class="panel">
     <div class="panel-heading">
@@ -26,27 +25,27 @@
 
             <a href="@Url.Action("Index")" class="btn-mvc btn-mvc-large">Back</a>
         }
-        else if (Model.Category.Topics.Any())
+        else if (Model.CategoryTopics.Any())
         {
             <h2>Unable To Delete</h2>
             <p>This category has discussions associated with it, please either delete or move the topics to a different category</p>
 
             <h4>Topics</h4>
             <ul>
-                @foreach (var topic in Model.Category.Topics.Take(10))
+                @foreach (var topic in Model.CategoryTopics.Take(10))
                 {
-                    <li><a href="@topic.NiceUrl">@topic.Name</a></li>
+                    <li><a href="@Url.Action("ShowTopic", "Forum", new { slug = topic.Slug })">@topic.Name</a></li>
                 }
             </ul>
-            if (topicCount > 10)
+            if (Model.CategoryTopics.Count() > 10)
             {
-                <p>And @(topicCount - 10) other topics...</p>
+                <p>And @(Model.CategoryTopics.Count() - 10) other topics...</p>
             }
             <a href="@Url.Action("Index")" class="btn-mvc btn-mvc-large">Back</a>
         }
         else
         {
-            using (Html.BeginForm("DeleteCategory", "AdminCategory", FormMethod.Post))
+            using (Html.BeginForm("DeleteCategory", "ForumAdmin", FormMethod.Post))
             {
                 <h2>Delete Category?</h2>
                 <p>Are you sure you want to delete this Category? You cannot undo this action.</p>
